2005-05-11  Nathaniel Smith  <njs@codesourcery.com>

	* std_hooks.lua (ignore_file): Organize a bit more, add
	patterns for autotools cache files, and darcs, codeville, git
	metadata directories.

2005-05-11  Timothy Brownawell  <tbrownaw@gmail.com>

	* revision.cc (expand_dominators): Fix bitmap size-matching.
		(find_common_ancestor_for_merge): Do not wait for ancestors
		to be expanded to the beginning of time before expanding
		dominators. Requires above fix for correct behavior.
	* ChangeLog: Fix date on previous entry.

2005-05-11  Timothy Brownawell  <tbrownaw@gmail.com>

	* contrib/monoprof.sh: Add profiling test for "netsync large file".
		Add options to only run specific profile tests.

2005-05-11  Stanislav Karchebny <stanislav.karchebny@skype.net>

	* contrib/monotone-notify.pl: 'monotone log' takes a revision
	through the --revision= option.

2005-05-11  Richard Levitte  <richard@levitte.org>

	* contrib/monotone-notify.pl: Change all occurences of $symbol' to
	${symbol}' to avoid a confusing Perl warning.

2005-05-11  Joel Reed  <joelwreed@comcast.com>

	* contrib/monotone.zsh_completion: add zsh completion contrib.

2005-05-11  Matt Johnston  <matt@ucc.asn.au>

	* tests/t_add_intermediate_MT_path.at: remove the drop dir part
	* tests/t_delete_dir.at: add a note about re-enabling the above test
	* tests/t_cvsimport3.at: ignore stderr

2005-05-11  Matt Johnston  <matt@ucc.asn.au>

	* rcs_import.cc (find_branchpoint): if a branch is derived from two 
	differing parent branches, take the one closest to the trunk.
	* tests/t_cvsimport3.at: add a test for cvs_importing where branches
	come off a vendor import.
	* testsuite.at: add it

2005-05-11  Nathaniel Smith  <njs@codesourcery.com>

	* work.cc (build_deletions): Disable delete_dir.

2005-05-11  Matthew Gregan  <kinetik@orcon.net.nz>

	* constants.cc (constants::bufsz): Increase buffer size.  Reduces
	the runtime to tests/t_netsync_largish_file.at by four to seven
	times on my test machines.
